[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Bosonic"
version = "0.0.1"
authors = [
	{ name = "Karoki Mugambi", email = "karokianthony.tphy@gmail.com" }
]
description = "Bosonic GKP Qiskit simulator"
readme = "README.md"
requires-python = ">=3.13.1"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
	"qiskit==1.4.0",
	"qiskit-ibm-runtime==0.36.1",
	"qiskit-aer==0.16.2",
	"numpy==2.2.3",
	"matplotlib==3.10.1",
	"qutip==5.1.1",
]

[tool.setuptools]
packages = ["bosonic"]

[tool.setuptools-git-versioning]
enabled = true

